--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "expo": "~45.0.0",
     "expo-constants": "^13.1.1",
     "expo-status-bar": "~1.3.0",
-    "firebase": "^9.8.4",
     "react": "17.0.2",
+    "firebase": "8.2.3",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
     "react-native-safe-area-context": "4.2.4",
